--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -7,7 +7,12 @@
         <button mat-button routerLink="/home">Home</button>
         <button mat-button routerLink="/usuarios">Usuarios</button>
         <button mat-button routerLink="/productos">Productos</button>
-        <button mat-button routerLink="/categorias">Categorias</button>
+        <!-- <button mat-button routerLink="/categorias">Categorias</button> -->
+        <button mat-button [matMenuTriggerFor]="menu">Categorias</button>
+            <mat-menu #menu="matMenu">
+                <button mat-menu-item routerLink="/categorias">Categorias</button>
+                <button mat-menu-item routerLink="/subcategorias">Subcategorias</button>
+            </mat-menu>
         <button mat-button routerLink="/ventas">Ventas</button>
     </div>
 </mat-toolbar>
