--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -11,4 +11,7 @@ $sombreado-medio: 0px 0px 18px 2px rgba(36,36,36,0.46) !important;
 $sombreado-card: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12) !important;
 
 
+//color bakcground
+$color-background-1: #F5F5F5;
+
 
