--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -11,19 +11,17 @@
     
   <mat-divider></mat-divider>
 
-  <div class="row py-4">
+  <div class="row py-4 gallery">
 
-    <div class="col-md-3" *ngFor="let producto of productos">
+    <div class="col-md-3 gallery-li" *ngFor="let producto of productos">
       <mat-card class="example-card" >
          
-        <img mat-card-image src="{{pathImage}}{{producto.imagen.filename}}" alt="{{producto.imagen.originalname}}">
+        <img mat-card-image class="card-home-img" src="{{pathImage}}{{producto.imagen.filename}}" alt="{{producto.imagen.originalname}}">
         
         <mat-card-header>
           <mat-card-title>{{ producto.nombre }}</mat-card-title>
         </mat-card-header>
           
-    
-       
         <mat-card-content>
           <p>{{ producto.descripcion }}</p>
           <p>Precio: {{ producto.precio }}</p>
@@ -31,9 +29,9 @@
           <mat-card-subtitle>Stock: {{ producto.cantidad }}</mat-card-subtitle>
         </mat-card-content>
         
-        <mat-card-actions align="center">
-          <button mat-button color="primary">Comprar</button>
-          <button mat-button>Me gusta</button>
+        <mat-card-actions class="card-botones" align="center">
+          <button mat-button  color="primary">Comprar</button>
+          <button mat-button (click)="openDialog(producto)">Detalle</button>
         </mat-card-actions>
     
       </mat-card>
