producto modificado ok

--- a/src/app/components/dialog-element/dialog-element.component.html
+++ b/src/app/components/dialog-element/dialog-element.component.html
@@ -41,6 +41,7 @@
           <p>Precio: {{ data.precio }}</p>
           <mat-card-subtitle>Categoria: {{ data.categoria.descripcion }}</mat-card-subtitle>
           <mat-card-subtitle>Stock: {{ data.cantidad }}</mat-card-subtitle>
+          <mat-card-subtitle>SKU: {{ data.sku }}</mat-card-subtitle>
         </mat-card-content>
         
         <mat-card-actions align="center">
