--- a/src/app/pages/usuario/usuario.component.html
+++ b/src/app/pages/usuario/usuario.component.html
@@ -1,129 +1,139 @@
 <div class="container">
 
   <div class="row">
-    <h1 class="titulo">Categorias</h1>
+    <div class="col-md-12 titulo">
+      <h1>{{titulo}}</h1>
+    </div>
+    <div class="col-md-12 subtitulo">
+      <h3>{{subtitulo}}</h3>
+    </div>
   </div>
 
-  <div class="row">
-
-    <div class="col-md-3" style="margin-top: 10px;">
+  <mat-divider></mat-divider>
     
+  <div class="row py-4">
+
+    <!-- lado izquierdo -->
+    <div class="col-md-3">
+      
       <mat-card>
       
         <form class="example-form" [formGroup]="myForm">
 
-          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-
-          <!-- id -->
+          <!-- imagen -->
+          <img mat-card-image class="card-form-img" src="{{pathImage}}{{imagenSeleccionada}}">
+      
+          <!-- id - readonly -->
           <mat-form-field class="example-full-width">
             <mat-label>ID</mat-label>
-            <input matInput formControlName="_id" [(ngModel)]="usuariosService.selectedUsuario._id" disabled>
+            <input matInput formControlName="_id" readonly>
+            <mat-icon matSuffix>fingerprint</mat-icon>
           </mat-form-field>
-
+          
+          <!-- nombre - oblig -->
+          <mat-form-field class="example-full-width">
+            <mat-label>Nombre</mat-label>
+            <input matInput formControlName="nombre" >
+            <mat-error *ngIf="myForm.get('nombre').hasError('required') && myForm.get('nombre').dirty ">
+              El campo es <strong>Requerido</strong>
+            </mat-error>
+          </mat-form-field>
+          
+          <!-- apellido -->
+          <mat-form-field class="example-full-width">
+            <mat-label>Apellido</mat-label>
+            <input matInput formControlName="apellido">
+          </mat-form-field>
+          
           <!-- usuario - oblig -->
           <mat-form-field class="example-full-width">
-            <mat-label>usuario</mat-label>
-            <input matInput formControlName="usuario" [(ngModel)]="usuariosService.selectedUsuario.usuario" >
+            <mat-label>Usuario</mat-label>
+            <input matInput formControlName="usuario" >
             <mat-error *ngIf="myForm.get('usuario').hasError('required') && myForm.get('usuario').dirty ">
               El campo es <strong>Requerido</strong>
             </mat-error>
           </mat-form-field>
 
-          <!-- nombre - oblig -->
+          <!-- telefono -->
           <mat-form-field class="example-full-width">
-            <mat-label>nombre</mat-label>
-            <input matInput formControlName="nombre" [(ngModel)]="usuariosService.selectedUsuario.nombre" >
-            <mat-error *ngIf="myForm.get('nombre').hasError('required') && myForm.get('nombre').dirty ">
+            <mat-label>Telefono</mat-label>
+            <input type="tel" matInput formControlName="telefono">
+          </mat-form-field>
+          
+          <!-- email - oblig -->
+          <mat-form-field class="example-full-width">
+            <mat-label>Email</mat-label>
+            <input type="email" matInput formControlName="email">
+            <mat-error *ngIf="myForm.get('email').hasError('required') && myForm.get('email').dirty">
               El campo es <strong>Requerido</strong>
             </mat-error>
           </mat-form-field>
-
-          <!-- apellido - oblig -->
-          <mat-form-field class="example-full-width">
-            <mat-label>apellido</mat-label>
-            <input matInput formControlName="apellido" [(ngModel)]="usuariosService.selectedUsuario.apellido" >
-            <mat-error *ngIf="myForm.get('apellido').hasError('required') && myForm.get('apellido').dirty ">
-              El campo es <strong>Requerido</strong>
-            </mat-error>
-          </mat-form-field>
-
-          <!-- telefono - oblig -->
-          <mat-form-field class="example-full-width">
-            <mat-label>telefono</mat-label>
-            <input matInput formControlName="telefono" [(ngModel)]="usuariosService.selectedUsuario.telefono" >
-            <mat-error *ngIf="myForm.get('telefono').hasError('required') && myForm.get('telefono').dirty ">
-              El campo es <strong>Requerido</strong>
-            </mat-error>
-          </mat-form-field>
-
-          <!-- email - oblig - email valid -->
-          <mat-form-field class="example-full-width">
-            <mat-label>email</mat-label>
-            <input type="email" matInput formControlName="email" [(ngModel)]="usuariosService.selectedUsuario.email" >
-              <mat-error *ngIf="myForm.get('email').hasError('required') && myForm.get('email').dirty">
-                El campo es <strong>Requerido</strong>
-              </mat-error>
-              <mat-error *ngIf="myForm.get('email').hasError('email') && myForm.get('email').dirty ">
-                Por favor, introduzca un email valido
-              </mat-error>
-            
-          </mat-form-field>
-
+          
           <!-- password - oblig -->
           <mat-form-field class="example-full-width">
-            <mat-label>password</mat-label>
-            <input type="password" matInput formControlName="password" [(ngModel)]="usuariosService.selectedUsuario.password" >
-            <mat-error *ngIf="myForm.get('password').hasError('required') && myForm.get('password').dirty ">
+            <mat-label>Password</mat-label>
+            <input type="password" matInput formControlName="password">
+            <mat-error *ngIf="myForm.get('password').hasError('required') && myForm.get('password').dirty">
               El campo es <strong>Requerido</strong>
             </mat-error>
           </mat-form-field>
- 
-          <mat-card-actions>
+                                                
+          <!-- imagen - upload -->
+          <input type="file" name="photo" ng2FileSelect [uploader]="uploader" (change)=onChange($event) />
+         
+          <!-- rol -->
+          <mat-form-field class="example-full-width">
+            <mat-label>Rol</mat-label>
+            <input type="number" matInput formControlName="rol" >
+          </mat-form-field>
+
+          <!-- acciones -->
+          <mat-card-actions align="center">
             <button mat-raised-button color="primary" [disabled]="myForm.invalid" (click)="alta()">Guardar</button>
-            <button mat-button (click)="resetForm()">Limpiar</button>
+            <button mat-stroked-button (click)="resetForm()">Limpiar</button>
           </mat-card-actions>
 
         </form>
         
       </mat-card>
-    
+            
     </div>
 
+    <!-- lado derecha -->
     <div class="col-md-9">
-    
+         
       <ngx-datatable
-        class="material"
-        [rows]=dato.docs
-        [headerHeight]="50"
-        [footerHeight]="50"
-        rowHeight="auto"
-        columnMode="force"
-        [externalPaging]="true"
-        [count]=dato.totalDocs
-        [limit]=dato.limit
-        (page)="setPage($event)"
-        (activate)="modificar($event)"
-        >
-        <ngx-datatable-column name="Imagen" prop="id" >
-          <ng-template let-row="rows" let-value="value" ngx-datatable-cell-template>
-            <img class="img-thumbnail" style="height: auto; width: 100px;" src="https://picsum.photos/200/200" alt="Card image cap"/>
-          </ng-template>  
-        </ngx-datatable-column>
-        
-        <ngx-datatable-column *ngFor="let col of columns" [name]="col.name" [prop]="col.prop" ></ngx-datatable-column>
-    
-        <ngx-datatable-column name="Acciones" prop="id" >
-          <ng-template let-row="rows" let-value="value" ngx-datatable-cell-template>
-            <a class="waves-effect waves-light btn"><i class="material-icons">edit</i></a>
-            <a (click)="borrar(value)" class="waves-effect waves-light btn red darken-3"><i class="material-icons">delete</i></a>
-          </ng-template>  
-        </ngx-datatable-column>
-    
-      </ngx-datatable>
+          class="material datatable-data-usu"
+          [rows]= dato.docs
+          [headerHeight]="50"
+          [footerHeight]="50"
+          rowHeight="auto"
+          columnMode="force"
+          [externalPaging]="true"
+          [count]="dato.totalDocs"
+          [limit]="dato.limit"
+          (page)="setPage($event)"
+          (activate)="onActivate($event)"
+          >
+          
+          <ngx-datatable-column name="Imagen" prop="imagen">
+            <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
+              <img class="table-avatar-img" src="{{pathImage}}{{row.imagen.filename}}"> 
+            </ng-template>  
+          </ngx-datatable-column>
 
+          <ngx-datatable-column *ngFor="let col of columns" [name]="col.name" [prop]="col.prop"></ngx-datatable-column>
+      
+          <ngx-datatable-column name="Eliminar" prop="id" >
+            <ng-template let-row="row" let-value="value" ngx-datatable-cell-template >
+              <a (click)="borrar(value)" class="waves-effect waves-light btn red darken-3"><i class="material-icons">delete</i></a>
+            </ng-template>  
+          </ngx-datatable-column>
+      
+        </ngx-datatable>
+      
     </div>
-    
-  
+
   </div> <!--row-->
 
 </div> <!--container-->
